# Ctypes_TensorRT

./: CMakeLists.txt  README.md  crnn_copy.cpp  crnn_header.h  crnn_wrapper_header.cpp  crnn_wrapper_header.h  image.cpp  image.h  test.py
